--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,13 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
-*/.DS_Store
 /storage/*
+
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
